# alprou-cli

./: pyproject.toml
alprou_cli/: backend.py  cli.py
tests/: test_alprou_cli.py
