[tool.poetry]
name = "alprou-cli"
version = "0.1.0"
description = "CLI for Alprou"
authors = ["0djentd"]

[tool.poetry.scripts]
alprou = "alprou_cli.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
click = "^8.1.3"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
